# liquidssh

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-installers.yml
resources/: Info.plist.in
resources/icons/: LiquidSSH.icns
src/: CustomTabBar.cpp  CustomTabBar.h  CustomTabWidget.cpp  CustomTabWidget.h  Glass.cpp  Glass.h  GlassCloseButton.cpp  GlassCloseButton.h  Glass_mac.mm  Glass_stub.cpp  Glass_win.cpp  InfoTab.cpp  InfoTab.h  MainWindow.cpp  MainWindow.h  NewHostDialog.cpp  NewHostDialog.h  SSHWorker.cpp  SSHWorker.h  Sidebar.cpp  Sidebar.h  TabArea.cpp  TabArea.h  TerminalTab.cpp  TerminalTab.h  TerminalView.cpp  TerminalView.h  main.cpp
src/store/: HostsStore.cpp  HostsStore.h
src/types/: SSHHost.h
